--- a/src/style/generic.scss
+++ b/src/style/generic.scss
@@ -1,1 +1,10 @@
 @import "node_modules/bootstrap/scss/bootstrap";
+
+img {
+    max-width: 100%;
+}
+
+.btn {
+    padding: .0625rem .375rem;
+    text-transform: uppercase;
+}
