feat: added AppWeAre

--- a/src/style/partials/_variables.scss
+++ b/src/style/partials/_variables.scss
@@ -1,3 +1,4 @@
 $brand-primary: #ffa737;
 $brand-secondary: #556eed;
-$brand-light: #f8f8f8;
+$brand-light-primary: #f7f8f9;
+$brand-light-secondary: #f8f8f8;
