feat: added hover to AppWeAre and change color to p

--- a/src/style/partials/_variables.scss
+++ b/src/style/partials/_variables.scss
@@ -2,3 +2,5 @@ $brand-primary: #ffa737;
 $brand-secondary: #556eed;
 $brand-light-primary: #f7f8f9;
 $brand-light-secondary: #f8f8f8;
+$brand-dark: #202020;
+$brand-dark-light: #5d5f64;
