feat: added AppWeDo

--- a/src/style/partials/_variables.scss
+++ b/src/style/partials/_variables.scss
@@ -4,3 +4,4 @@ $brand-light-primary: #f7f8f9;
 $brand-light-secondary: #f8f8f8;
 $brand-dark: #202020;
 $brand-dark-light: #5d5f64;
+$brand-secondary-dark: #001061;
