fix: added variables and chnage color to AppWeDo and AppWeAre

--- a/src/style/partials/_variables.scss
+++ b/src/style/partials/_variables.scss
@@ -1,7 +1,10 @@
 $brand-primary: #ffa737;
 $brand-secondary: #556eed;
+$brand-secondary-light: #607afe;
+$brand-tertiary: #001061;
+$brand-tertiary-light: #02156f;
 $brand-light-primary: #f7f8f9;
 $brand-light-secondary: #f8f8f8;
+$brand-light-tertiary: #ffffff;
 $brand-dark: #202020;
 $brand-dark-light: #5d5f64;
-$brand-secondary-dark: #001061;
