--- a/src/style/generic.scss
+++ b/src/style/generic.scss
@@ -1,3 +1,4 @@
+@use './partials/variables' as *;
 @import "node_modules/bootstrap/scss/bootstrap";
 
 img {
@@ -8,13 +9,65 @@ h3 {
     font-weight: 700;
 }
 
+p {
+    color: $brand-dark-light;
+}
+
 .btn {
     padding: .0625rem .375rem;
     font-size: 12px;
     font-weight: 700;
     text-transform: uppercase;
 
+    &.small {
+        &.brand-dark {
+            width: 2.3125rem;
+            height: 1.75rem;
+            background-color: $brand-dark;
+            border-color: transparent;
+            border-radius: 0.375rem 0.375rem 0 0;
+            color: $brand-light-tertiary;
+            font-size: 10px;
+
+            &:hover {
+                background-color: $brand-dark-light;
+            }
+        }
+    }
+
     &.big {
         padding: 0.5rem 1.5rem;
+
+        &.brand-primary {
+            background-color: $brand-primary;
+            color: $brand-light-secondary;
+
+            &:hover {
+                background-color: transparent;
+                border: 1px solid $brand-primary;
+                color: $brand-primary;
+            }
+        }
+
+        &.brand-secondary {
+            background-color: $brand-secondary;
+            color: $brand-light-secondary;
+
+            &:hover {
+                background-color: transparent;
+                border: 1px solid $brand-secondary;
+                color: $brand-secondary;
+            }
+        }
+
+        &.brand-outline-dark {
+            border: 1px solid $brand-dark;
+            color: $brand-dark;
+
+            &:hover {
+                border: 1px solid $brand-secondary;
+                color: $brand-secondary;
+            }
+        }
     }
 }
