--- a/src/style/generic.scss
+++ b/src/style/generic.scss
@@ -15,7 +15,7 @@ p {
 
 .btn {
     padding: .0625rem .375rem;
-    font-size: 12px;
+    font-size: .75rem;
     font-weight: 700;
     text-transform: uppercase;
 
@@ -27,7 +27,7 @@ p {
             border-color: transparent;
             border-radius: 0.375rem 0.375rem 0 0;
             color: $brand-light-tertiary;
-            font-size: 10px;
+            font-size: .625rem;
 
             &:hover {
                 background-color: $brand-dark-light;
@@ -44,7 +44,7 @@ p {
 
             &:hover {
                 background-color: transparent;
-                border: 1px solid $brand-primary;
+                border: .0625rem solid $brand-primary;
                 color: $brand-primary;
             }
         }
@@ -55,17 +55,17 @@ p {
 
             &:hover {
                 background-color: transparent;
-                border: 1px solid $brand-secondary;
+                border: .0625rem solid $brand-secondary;
                 color: $brand-secondary;
             }
         }
 
         &.brand-outline-dark {
-            border: 1px solid $brand-dark;
+            border: .0625rem solid $brand-dark;
             color: $brand-dark;
 
             &:hover {
-                border: 1px solid $brand-secondary;
+                border: .0625rem solid $brand-secondary;
                 color: $brand-secondary;
             }
         }
